# bouquetfl

./: .gitignore  KNOWN_BUGS.md  README.md  main.py  pyproject.toml
analysis/: filesystem.py  plots.py
bouquetfl/: client_app.py  experiment_config.yaml  main.py  plotting_tools.py  power_clock_tools.py  resource_utils.py  server_app.py  task.py  tester.py  trainer.py
bouquetfl/checkpoints/: load_and_training_times.pkl  load_and_training_times_diverse_gpus.pkl  resources_client_0.npz  resources_client_1.npz  resources_client_2.npz
bouquetfl/core/: create_env.py  emulation_engine.py  power_clock_tools.py  trainer.py
bouquetfl/data/: cifar100.py  data_utils.py  flowertune_llm.py  speech_commands.py  tiny_imagenet.py  whisper.py
bouquetfl/hardwareconf/: client_hardware.yaml  cpus.csv  gpus.csv  sampler.py
bouquetfl/utils/: filesystem.py  localinfo.py  network.py  plots.py  power_clock_tools.py  results.py  sampler.py
bouquetfl/visualization/: visualize_federation.py  visualize_gif.py
checkpoints/: load_and_training_times.pkl
config/: federation_client_hardware.yaml  local_hardware.yaml  local_hardware_parameters.yaml
datasets/: locations.toml  ping_graph.toml
hardwareconf/: cpus.toml  gpus.toml
logs/bouquetrun/: events.out.tfevents.1770240812.arnoserver.336535.0  events.out.tfevents.1770240815.arnoserver.336535.2  events.out.tfevents.1770240828.arnoserver.337782.0  events.out.tfevents.1770242237.arnoserver.355145.0  events.out.tfevents.1770242241.arnoserver.355145.2  events.out.tfevents.1770243101.arnoserver.357406.0  events.out.tfevents.1770243105.arnoserver.357406.2  events.out.tfevents.1770243118.arnoserver.358654.0  events.out.tfevents.1770243247.arnoserver.359246.0  events.out.tfevents.1770243250.arnoserver.359246.2  events.out.tfevents.1770243264.arnoserver.360499.0  events.out.tfevents.1770243438.arnoserver.361193.0  events.out.tfevents.1770243442.arnoserver.361193.2  events.out.tfevents.1770243455.arnoserver.362443.0  events.out.tfevents.1770243509.arnoserver.362794.0  events.out.tfevents.1770243513.arnoserver.362794.2  events.out.tfevents.1770243526.arnoserver.364043.0  events.out.tfevents.1770243832.arnoserver.364621.0  events.out.tfevents.1770243836.arnoserver.364621.1  events.out.tfevents.1770243860.arnoserver.365967.0  events.out.tfevents.1770243863.arnoserver.365967.1  events.out.tfevents.1770243887.arnoserver.367303.0  events.out.tfevents.1770243890.arnoserver.367303.1  (+174 more)
networkconf/: locations.toml
old/: FlowerClient.py
scripts/: client_app.py  server_app.py
task/: cifar10.py  cifar100.py  cuda_vision.py  data_utils.py  whisper.py
(+913 files in other folders)
