# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bouquetfl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
requires-python = "==3.12.0"
# Dependencies for your Flower App
dependencies = [
    "accelerate>=1.10.0",
    "altair>=5.5.0",
    "black>=25.1.0",
    "blobfile>=3.0.0",
    "einops>=0.8.1",
    "einx>=0.3.0",
    "flwr-datasets>=0.5.0",
    "flwr[simulation]>=1.20.0",
    "h5py>=3.14.0",
    "ipython>=8.37.0",
    "isort>=6.0.1",
    "jaxtyping>=0.3.2",
    "keyring>=25.6.0",
    "keyrings-alt>=5.0.2",
    "matplotlib>=3.10.5",
    "numba>=0.62.1",
    "numpy<2.3.2",
    "nvitop>=1.5.3",
    "pandas>=2.3.1",
    "peft>=0.17.0",
    "pynvml>=12.0.0",
    "pytest>=8.4.1",
    "ray==2.31.0",
    "tiktoken>=0.11.0",
    "timm>=1.0.19",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.55.0",
    "vl-convert-python>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "arnogeimer"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "scripts.server_app:app"
clientapp = "scripts.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 5
fraction-fit = 1
local-epochs = 3
experiment = "cifar100"
model = "resnet18"              # model architecture or LLM, optional
batch_size = 64                 # training batch size
learning_rate = 0.01 
num-clients = 14

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with x virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 14       # number of clients
options.backend.client-resources.num-cpus = 8       # needed to spawn clients successively, not in parallel
options.backend.client-resources.num-gpus = 1       # needed to spawn clients successively, not in parallel

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
